@@ -708,6 +708,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12081. Fix UserGroupInformation.java to support 64-bit zLinux.
     (aajisaka)
 
+    HADOOP-12214. Parse 'HadoopArchive' commandline using cli Options.
+    (vinayakumarb)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
